# wak

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-build.yml
include/wak/: asserts.h  bounding_box.h  common.h  floats.h  hash.h  impl.cpp  math.h  matrix.h  quaternion.h  random.h  ray.h  timer.h  transform.h  tuples.h  vectors.h
src/: math.cpp
